--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <!-- <link rel="icon" href="favicon.png"> -->
   <meta name="theme-color" content="">
   <!-- <link rel="manifest" href="manifest.webmanifest"> -->
@@ -38,25 +38,31 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://via.placeholder.com/1200x600/" class="d-block w-100" alt="">
+        <div class="d-flex justify-content-center">
+        <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
+       </div>
       </div>
       <div class="carousel-item">
-        <img src="https://via.placeholder.com/1200x600/" class="d-block w-100" alt="">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
+        <div class="d-flex justify-content-center">
+          <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>2 slide label</h5>
+            <p>Some representative placeholder content for the 2 slide.</p>
+          </div>
+         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://via.placeholder.com/1200x600/" class="d-block w-100" alt="">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
+        <div class="d-flex justify-content-center">
+          <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>3 slide label</h5>
+            <p>Some representative placeholder content for the 3 slide.</p>
+          </div>
+         </div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
