--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,40 @@
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
-  <header>
-    <h1>Hello, world!</h1>
-    <h2>This is my demo website template for Boxes, Slabs and Columns, a visual guide to web development techniques</h2>
+  <header class="d-flex justify-content-center flex-column">
+    <h1 class="text-center">Hello, world!</h1>
+    <h2 class="text-center">Welcome to Boxes, Slabs and Columns, a visual guide to web development techniques</h2>
   </header>
-  <nav></nav>
-  <main>
-    <div>
-      <section><h2>1 - Boxes</h2></section>
-      <section><h2>2 - Slabs</h2></section>
-      <section><h2>3 - Columns</h2></section>
-  </div>
+  <!-- <nav></nav> -->
+  <main class="d-flex justify-content-center flex-column">
+
+        <details>
+          <summary>1 - Boxes</summary>
+          <section class="d-flex justify-content-center flex-column">
+            <h2 class="text-center">This is a box:</h2>
+            <figure>
+              <!-- <figcaption>This is a Box</figcaption> -->
+              <img src="img/box.jpg" alt="A box" />
+            </figure>
+          </section>
+          <p class="text-center"> Did you know that websites are all essentially made of boxes?
+          </p>
+        </details>
+        
+        <details>
+          <summary>2 - Slabs</summary>
+          Something small enough to escape casual notice.
+        </details>
+        
+        <details>
+          <summary>3 - Columns</summary>
+          Something small enough to escape casual notice.
+        </details>
+  
   </main>
-  <div id="carouselExampleCaptions" class="carousel slide">
+
+
+  <!-- <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -39,7 +60,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="d-flex justify-content-center">
-        <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
+        <img src="img/box.jpg" class="d-block mw-100" alt="">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
@@ -48,7 +69,7 @@
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
+          <img src="img/slab.jpg" class="d-block mw-100" alt="">
           <div class="carousel-caption d-none d-md-block">
             <h5>2 slide label</h5>
             <p>Some representative placeholder content for the 2 slide.</p>
@@ -57,7 +78,7 @@
       </div>
       <div class="carousel-item">
         <div class="d-flex justify-content-center">
-          <img src="https://via.placeholder.com/600x600/" class="d-block mw-100" alt="">
+          <img src="img/column.jpg" class="d-block mw-100" alt="">
           <div class="carousel-caption d-none d-md-block">
             <h5>3 slide label</h5>
             <p>Some representative placeholder content for the 3 slide.</p>
@@ -73,7 +94,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div> -->
  <footer>
     <small>This is a creative commons project.</small>
   </footer>  
